# speed_racers_comp_test

./: README.md
My/speed_racers_comp_test/: all.launch  all_comp.launch  prova.launch
My/speed_racers_comp_test/freicar_bb_box_sr/: package.xml
My/speed_racers_comp_test/freicar_map_sr/: CMakeLists.txt  main.cpp
My/speed_racers_comp_test/freicar_map_sr/MapCore/include/map_core/: Map.h.deprecated  freicar_map_helper.h  freicar_map_objects.h
My/speed_racers_comp_test/freicar_map_sr/MapCore/src/: freicar_map.cpp
My/speed_racers_comp_test/freicar_map_sr/include/freicar_map/logic/: map_info.h
My/speed_racers_comp_test/freicar_map_sr/src/: main.cpp
My/speed_racers_comp_test/freicar_map_sr/src/logic/: map_info.cpp
My/speed_racers_comp_test/freicar_map_sr/src/planning/: lane_star.cpp
My/speed_racers_comp_test/freicar_overtake_sr/: CMakeLists.txt
My/speed_racers_comp_test/freicar_planner_sr/: package.xml
freicar_bb_box_sr/: CMakeLists.txt  all.launch  bb_box.launch  setup.py  setup_env.sh
freicar_bb_box_sr/msg/: bb.msg
freicar_bb_box_sr/src/: img_sub_bb_pub.py  inference.py
freicar_bb_box_sr/src/dataloader/: run_freicar_dataloader.py
freicar_control_sr/: position_error.txt
freicar_control_sr/data/: path.json
freicar_control_sr/scripts/: pub_path.py
freicar_control_sr/src/controller/: controller.cpp  controller.h  pure_pursuit.cpp  test_path.cpp
freicar_launch_sr/: CMakeLists.txt
freicar_launch_sr/bash/commands/: left.sh  right.sh  stop.sh
freicar_launch_sr/launch/: sim_base2_row.launch
freicar_launch_sr/spawn_positions/: freicar_race_1_spawn.yaml
freicar_localization_sr/bash/: download_loc_bag.bash
freicar_localization_sr/launch/: evaluate.launch
freicar_localization_sr/src/: particle_filter.cpp  particle_filter.h  pos_aver_low.txt  ros_pf_localization.cpp  sensor_model.h
freicar_map_sr/: README.MD
freicar_map_sr/MapThrift/: Readme.md  map_data_structure.thrift
freicar_map_sr/MapThrift/gen-cpp/: MapComm.cpp  map_data_structure_constants.cpp  map_data_structure_constants.h
freicar_map_sr/include/freicar_map/: thrift_map_proxy.h
freicar_map_sr/launch/: ros_map_framework.launch
freicar_map_sr/maps/: thriftmap_fix.aismap
freicar_map_sr/src/logic/: right_of_way.cpp
freicar_map_sr/src/planning/: lane_follower.cpp
freicar_overtake_sr/: CMakeLists.txt  depth.launch
freicar_overtake_sr/src/: depth_nodereal_sign_goback.py
freicar_planner_sr/: CMakeLists.txt  planner.launch
updated_23_03/: readme.md
updated_23_03/01-01-object-detection-exercise/: README.md  depth_nodereal.py  train.py
updated_23_03/01-01-object-detection-exercise/image_boundingb/: package.xml
updated_23_03/01-02-semantic-segmentation-exercise/: README_tutor.md
updated_23_03/01-02-semantic-segmentation-exercise/dataset_helper/: birdseye_demo.py  run_freicar_segreg_dataloader.py
updated_23_03/01-02-semantic-segmentation-exercise/model/: metric.py
updated_23_03/freicar_control_sr/launch/: start_controller.launch
updated_23_03/freicar_control_sr/scripts/: HLC_pub.py  Signing.py  move_laser_scan.py
updated_23_03/freicar_launch_sr/launch/: all.launch  record_cont.launch  rs_d435_and_t265.launch  sim_base2.launch  sim_base2_junc.launch  start_joystick.launch  start_sensors_no_intel.launch
updated_23_03/freicar_localization_sr/: README.md  package.xml
updated_23_03/freicar_localization_sr/configuration_files/: airsim_birdseye.xml
updated_23_03/freicar_localization_sr/src/: particle_filter.cpp  particle_filter.h  particle_filter1.cpp  position_error.txt  ros_pf_localization.cpp  ros_vis.cpp
updated_23_03/freicar_map_sr/: .ccls  CMakeLists1.txt
updated_23_03/freicar_map_sr/MapThrift/: makeThrift.sh
updated_23_03/freicar_map_sr/maps/: freicar_1.aismap  freicar_race_1.aismap  freicar_race_2.aismap
updated_23_03/freicar_map_sr/src/: main1.cpp
updated_24_overtake_angle/01-01-object-detection-exercise/: depth_nodereal.py  evaluate.py  img_sub_bb_pub.py
updated_24_overtake_angle/01-02-semantic-segmentation-exercise/: README.md  plot.py  view_images_and_lanecenters.rviz
updated_24_overtake_angle/01-02-semantic-segmentation-exercise/Epochs15_0.05/: evaluation_L1.txt  training_L1.txt
updated_24_overtake_angle/01-02-semantic-segmentation-exercise/dataset_helper/: birdsEyeT.py  color_coder.py  freicar_homography.yaml
updated_24_overtake_angle/freicar_control_sr/: CMakeLists.txt  README.md  package.xml
updated_24_overtake_angle/freicar_launch_sr/launch/: all.launch  sim_base.launch  sim_base2_junc.launch  zed_no_tf.launch
updated_24_overtake_angle/freicar_launch_sr/params/: common.yaml  zed.yaml
updated_24_overtake_angle/freicar_localization_sr/launch/: evaluate.launch
updated_24_overtake_angle/freicar_localization_sr/src/: map_helper.h  particle_filter.cpp  pos_aver_importance.txt  ros_pf_localization.cpp  ros_vis.h  sensor_model.cpp
updated_24_overtake_angle/freicar_map_sr/: framework_settings.rviz  package.xml
updated_24_overtake_angle/freicar_map_sr/src/: main.cpp
updated_twenty_four/: setup_new.sh  speed_racers_rviz.rviz
updated_twenty_four/01-01-object-detection-exercise/: README_tutors.md  ROW_enemy.py  depth_nodereal_sign_goback.py  requirements.txt
updated_twenty_four/01-01-object-detection-exercise/dataloader/: freicar_dataloader.py
updated_twenty_four/01-01-object-detection-exercise/image_boundingb/: CMakeLists.txt
updated_twenty_four/01-01-object-detection-exercise/projects/: freicar-detection.yml
updated_twenty_four/01-02-semantic-segmentation-exercise/: lane_center_publisher.py  seg_reg_publisher.py  train_segmentation.py
updated_twenty_four/freicar_control_sr/scripts/: movment.py  record_path.py
updated_twenty_four/freicar_localization_sr/: CMakeLists.txt  FindThrift.cmake
updated_twenty_four/freicar_localization_sr/launch/: evaluate.launch
updated_twenty_four/freicar_localization_sr/src/: particle_filter.cpp  particle_filter.h  quaternion_average.h  ros_pf_localization.h
updated_twenty_four/freicar_map_sr/: CMakeLists.txt
updated_twenty_four/freicar_overtake_sr/: .CMakeLists.txt.swp  package.xml
(+85 files in other folders)
